--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="Hunyadi_yellow">#F6BC66</color>
+    <color name="Sandy_brown">#F6AC69</color>
+    <color name="Atomic_tangerine">#F69C6D</color>
+    <color name="Salmon">#F68C70</color>
+    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="Coral_pink">#F57C73</color>
+    <color name="Bright_pink">#F56C77</color>
+    <color name="text_secondary">#BEBFC5</color>
+    <color name="background_light">#F5F5F5</color>
+    <color name="card_background">#FFFFFF</color>
 </resources>
