--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -13,7 +13,7 @@
         android:layout_width="311dp"
         android:layout_height="292dp"
         android:layout_marginTop="164dp"
-        android:contentDescription="Logo del Festival"
+        android:contentDescription="@string/logo_app"
         android:src="@drawable/Logotype"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
