--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             android:orientation="vertical"
             android:padding="16dp">
 
-            <!-- Header del Evento -->
+            <!-- Header de la pagina de eventos -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -58,14 +58,14 @@
 
             </LinearLayout>
 
-            <!-- Sección Artistas -->
+            <!-- Evento 1 -->
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
-                xmlns:app="http://schemas.android.com/apk/res-auto">
+                >
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -76,7 +76,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="EVENTO 1"
+                        android:text="@string/arenal"
                         android:textSize="20sp"
                         android:textStyle="bold"
                         android:textColor="@color/black"
@@ -85,22 +85,29 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="mas informacion"
+                        android:text="@string/arenal_date"
+                        android:textSize="14sp"
+                        android:layout_marginBottom="12dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/arenal_loc"
                         android:textSize="14sp"
                         android:layout_marginBottom="12dp" />
 
                     <Button
-                        android:id="@+id/btnArtists"
+                        android:id="@+id/btnarenal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/btn_evento"
+                        android:text="@string/btn_evento1"
                         android:layout_gravity="end" />
 
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
 
-            <!-- Sección Horarios -->
+            <!-- Evento 2 -->
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -117,7 +124,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="EVENTO 2"
+                        android:text="@string/madcool"
                         android:textSize="20sp"
                         android:textStyle="bold"
                         android:textColor="@color/black"
@@ -126,22 +133,29 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Mas información"
+                        android:text="@string/mad_date"
+                        android:textSize="14sp"
+                        android:layout_marginBottom="12dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/mad_loc"
                         android:textSize="14sp"
                         android:layout_marginBottom="12dp" />
 
                     <Button
-                        android:id="@+id/btnSchedule"
+                        android:id="@+id/btnmadcool"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/btn_evento"
+                        android:text="@string/btn_evento2"
                         android:layout_gravity="end" />
 
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
 
-            <!-- Sección Lugar -->
+            <!-- Evento 3 -->
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -158,7 +172,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="EVENTO 3"
+                        android:text="@string/primavera"
                         android:textSize="20sp"
                         android:textStyle="bold"
                         android:textColor="@color/black"
@@ -167,22 +181,29 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Mas información"
+                        android:text="@string/primavera_date"
+                        android:textSize="14sp"
+                        android:layout_marginBottom="12dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/primavera_loc"
                         android:textSize="14sp"
                         android:layout_marginBottom="12dp" />
 
                     <Button
-                        android:id="@+id/btnVenue"
+                        android:id="@+id/btnprimavera"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/btn_evento"
+                        android:text="@string/btn_evento3"
                         android:layout_gravity="end" />
 
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
 
-            <!-- Sección Entradas -->
+            <!-- Evento 4 -->
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -199,7 +220,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/entradas"
+                        android:text="@string/viñarock"
                         android:textSize="20sp"
                         android:textStyle="bold"
                         android:textColor="@color/black"
@@ -208,22 +229,29 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Más información"
+                        android:text="@string/viña_date"
+                        android:textSize="14sp"
+                        android:layout_marginBottom="12dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/viña_loc"
                         android:textSize="14sp"
                         android:layout_marginBottom="12dp" />
 
                     <Button
-                        android:id="@+id/btnTickets"
+                        android:id="@+id/btnviña"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/btn_buy_tickets"
+                        android:text="@string/btn_evento4"
                         android:layout_gravity="end" />
 
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
 
-            <!-- Sección Información -->
+            <!-- Evento 5 -->
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -240,7 +268,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/info"
+                        android:text="@string/resurrection"
                         android:textSize="20sp"
                         android:textStyle="bold"
                         android:textColor="@color/black"
@@ -249,15 +277,22 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Más Información"
+                        android:text="@string/resurrection_date"
+                        android:textSize="14sp"
+                        android:layout_marginBottom="12dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/resurrection_loc"
                         android:textSize="14sp"
                         android:layout_marginBottom="12dp" />
 
                     <Button
-                        android:id="@+id/btnInfo"
+                        android:id="@+id/btnresurrect"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/btn_more_info"
+                        android:text="@string/btn_evento5"
                         android:layout_gravity="end" />
 
                 </LinearLayout>
