--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -14,7 +14,7 @@
         android:layout_height="292dp"
         android:layout_marginTop="164dp"
         android:contentDescription="@string/logo_app"
-        android:src="@drawable/Logotype"
+        android:src="@drawable/logotyperedondo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
