--- a/app/src/main/res/layout/activity_artistas.xml
+++ b/app/src/main/res/layout/activity_artistas.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ArtistasActivity">
 
+    <!-- Toolbar -->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tituloArtistas"
         android:layout_width="wrap_content"
@@ -13,32 +23,32 @@
         android:text="@string/artistas"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="24dp" />
 
     <TextView
-        android:id="@+id/descripcionArtistas"
+        android:id="@+id/eslogan"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:text="@string/artistas_descrip"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:textSize="16sp"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tituloArtistas" />
+        app:layout_constraintTop_toBottomOf="@id/tituloArtistas"
+        android:layout_marginTop="8dp" />
 
-    <ListView
-        android:id="@+id/listaartistas"
-        android:layout_width="403dp"
-        android:layout_height="585dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewContent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginTop="16dp"
-        android:dividerHeight="1dp"
+        android:padding="8dp"
+        app:layout_constraintTop_toBottomOf="@id/eslogan"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/descripcionArtistas"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
