--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,8 @@
     <color name="text_secondary">#BEBFC5</color>
     <color name="background_light">#F5F5F5</color>
     <color name="card_background">#FFFFFF</color>
+    <color name="gray_light">#CCCCCC</color>
+    <color name="primary">#2196F3</color>
+    <color name="primary_dark">#1976D2</color>
+    <color name="accent">#FF4081</color>
 </resources>
