--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -220,7 +220,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/viñarock"
+                        android:text="@string/vinarock"
                         android:textSize="20sp"
                         android:textStyle="bold"
                         android:textColor="@color/black"
@@ -229,14 +229,14 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/viña_date"
+                        android:text="@string/vina_date"
                         android:textSize="14sp"
                         android:layout_marginBottom="12dp" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/viña_loc"
+                        android:text="@string/vina_loc"
                         android:textSize="14sp"
                         android:layout_marginBottom="12dp" />
 
