--- a/app/src/main/res/layout/activity_artistas.xml
+++ b/app/src/main/res/layout/activity_artistas.xml
@@ -28,6 +28,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="24dp" />
 
+    <!-- Botón con el enlace al festival -->
+    <ImageButton
+        android:id="@+id/btnFestivalLink"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
+        android:background="@null"
+        android:scaleType="centerCrop"
+        android:contentDescription="@string/btn_more_info"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/tituloArtistas"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp" />
+
+
     <TextView
         android:id="@+id/eslogan"
         android:layout_width="350dp"
@@ -37,7 +52,7 @@
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tituloArtistas"
+        app:layout_constraintTop_toBottomOf="@id/btnFestivalLink"
         android:layout_marginTop="8dp" />
 
     <androidx.recyclerview.widget.RecyclerView
