--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,8 @@
             android:orientation="vertical"
             android:padding="16dp">
 
+
+
             <!-- Header de la pagina de eventos -->
             <LinearLayout
                 android:layout_width="match_parent"
@@ -224,7 +226,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/viñarock"
+                        android:text="@string/vinarock"
                         android:textSize="20sp"
                         android:textStyle="bold"
                         android:textColor="@color/black"
@@ -233,14 +235,14 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/viña_date"
+                        android:text="@string/vina_date"
                         android:textSize="14sp"
                         android:layout_marginBottom="12dp" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/viña_loc"
+                        android:text="@string/vina_loc"
                         android:textSize="14sp"
                         android:layout_marginBottom="12dp" />
 
