--- a/app/src/main/res/layout/activity_artistas.xml
+++ b/app/src/main/res/layout/activity_artistas.xml
@@ -31,8 +31,8 @@
     <!-- Botón con el enlace al festival -->
     <ImageButton
         android:id="@+id/btnFestivalLink"
-        android:layout_width="120dp"
-        android:layout_height="60dp"
+        android:layout_width="260dp"
+        android:layout_height="200dp"
         android:background="@null"
         android:scaleType="centerCrop"
         android:contentDescription="@string/btn_more_info"
@@ -61,9 +61,11 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@id/eslogan"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/eslogan"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
