--- a/app/src/main/res/layout/activity_artistas.xml
+++ b/app/src/main/res/layout/activity_artistas.xml
@@ -43,6 +43,7 @@
         android:layout_marginTop="8dp" />
 
 
+
     <TextView
         android:id="@+id/eslogan"
         android:layout_width="350dp"
@@ -55,6 +56,16 @@
         app:layout_constraintTop_toBottomOf="@id/btnFestivalLink"
         android:layout_marginTop="8dp" />
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchViewArtists"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:queryHint="Buscar artista"
+        app:layout_constraintTop_toBottomOf="@id/eslogan"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewContent"
         android:layout_width="0dp"
@@ -65,7 +76,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/eslogan"
+        app:layout_constraintTop_toBottomOf="@id/searchViewArtists"
         app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
