--- a/app/src/main/res/layout/activity_artistas.xml
+++ b/app/src/main/res/layout/activity_artistas.xml
@@ -40,13 +40,23 @@
         app:layout_constraintTop_toBottomOf="@id/tituloArtistas"
         android:layout_marginTop="8dp" />
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchViewArtists"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:queryHint="Buscar artista"
+        app:layout_constraintTop_toBottomOf="@id/eslogan"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewContent"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@id/eslogan"
+        app:layout_constraintTop_toBottomOf="@id/searchViewArtists"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
