--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -14,22 +14,11 @@
         android:layout_height="292dp"
         android:layout_marginTop="164dp"
         android:contentDescription="@string/logo_app"
-        android:src="@drawable/mi_icono_redondo"
+        android:src="@drawable/nextup_logo_rojo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/Fecha"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/eslogan"
@@ -37,21 +26,23 @@
         android:layout_height="wrap_content"
         android:text="@string/eslogan"
         android:textColor="@color/white"
-        android:textSize="18sp"
+        android:fontFamily="@font/zagga_regular"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Button
         android:id="@+id/enter_evento"
         android:layout_width="135dp"
         android:layout_height="50dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="8dp"
         android:backgroundTint="@color/white"
         android:text="@string/enter_evento"
         android:textColor="@color/black"
-        android:textSize="12sp"
+        android:fontFamily="@font/zagga_regular"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
