--- a/app/src/main/res/layout/item_section_content.xml
+++ b/app/src/main/res/layout/item_section_content.xml
@@ -79,7 +79,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="8dp"
             android:src="@drawable/ic_flecha"
-            android:tint="@color/text_secondary" />
+            app:tint="@color/text_secondary" />
 
     </LinearLayout>
 
